# epic-c-example

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  app.lds
app-rs/: CMakeLists.txt  Cargo.toml
app-rs/src/: htif.rs  main.rs
cmake/: coremark.cmake  epic-llvm.cmake  epic-rust.cmake  rustup.cmake  spike.cmake  utils.cmake
kernel/: CMakeLists.txt  elf.c  kernel.c  tock.c  util.c  util.h
